Updated dimensions of doggos.css

--- a/css/doggos.css
+++ b/css/doggos.css
@@ -8,8 +8,8 @@ body {
     }
 }
 img {
-    max-width: 640px;
-    max-height: 640px;
+    max-width: 45rem;
+    max-height: 45rem;
 }
 
 .spinner {
